# DetourLambda

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
example/: main.cpp
include/DetourLambda/: DetourLambda.hpp
src/: DetourLambda.cpp
